# semantic-search-playground

./: .gitignore  README.md
llm-zoomcamp-hw2/: embedding_experiment.ipynb  ingest.py  main.py  pyproject.toml
